--- a/clustring.ipynb
+++ b/clustring.ipynb
@@ -7,7 +7,8 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOpbyk6UfdKtzDhH/vxsFOj",
+      "mount_file_id": "1XeKp3FTibxDGrDNZAZqz7Tj_RA7p2Y1P",
+      "authorship_tag": "ABX9TyPBW3xo0Ra58dF2SCrncLl4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +42,172 @@
         "id": "B9Bl0RWIwQd1"
       },
       "source": [
-        "# "
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hXC08ur6xq4r"
+      },
+      "source": [
+        "### Cloning the github repository in colab"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oBYKpZUHx4UR",
+        "outputId": "29e7c16f-8dc1-44d2-d65d-1221441a1c2f"
+      },
+      "source": [
+        "% cd /content/drive/MyDrive/Clustering_according_to_item_popularity/\r\n"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/MyDrive/Clustering_according_to_item_popularity\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kIX5wgxF0HNT",
+        "outputId": "09a97b09-ba25-462c-c309-4852315acb17"
+      },
+      "source": [
+        "! ls"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "clustring.ipynb  LICENSE  README.md\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aCDjnzeY0wIv",
+        "outputId": "ca6ebda5-c627-4785-c2b4-efd929512a87"
+      },
+      "source": [
+        "! git clone https://github.com/sulaimanbehzad/Clustering_according_to_item_popularity.git"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'Clustering_according_to_item_popularity'...\n",
+            "remote: Enumerating objects: 8, done.\u001b[K\n",
+            "remote: Counting objects: 100% (8/8), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (7/7), done.\u001b[K\n",
+            "remote: Total 8 (delta 1), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (8/8), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "37LpX0j71-XT",
+        "outputId": "8bdc3da8-bc69-46d6-8328-f098df2e2a7c"
+      },
+      "source": [
+        "! git status"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "On branch main\n",
+            "Your branch is up to date with 'origin/main'.\n",
+            "\n",
+            "nothing to commit, working tree clean\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zAWgZ0Z32TMz",
+        "outputId": "3e4a2274-041e-4729-c122-48b73a57a921"
+      },
+      "source": [
+        "! git pull"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "remote: Enumerating objects: 7, done.\u001b[K\n",
+            "remote: Counting objects:  14% (1/7)\u001b[K\rremote: Counting objects:  28% (2/7)\u001b[K\rremote: Counting objects:  42% (3/7)\u001b[K\rremote: Counting objects:  57% (4/7)\u001b[K\rremote: Counting objects:  71% (5/7)\u001b[K\rremote: Counting objects:  85% (6/7)\u001b[K\rremote: Counting objects: 100% (7/7)\u001b[K\rremote: Counting objects: 100% (7/7), done.\u001b[K\n",
+            "remote: Compressing objects:  33% (1/3)\u001b[K\rremote: Compressing objects:  66% (2/3)\u001b[K\rremote: Compressing objects: 100% (3/3)\u001b[K\rremote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Total 5 (delta 2), reused 5 (delta 2), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (5/5), done.\n",
+            "From https://github.com/sulaimanbehzad/Clustering_according_to_item_popularity\n",
+            "   6b2793c..3c88399  main       -> origin/main\n",
+            "Updating 6b2793c..3c88399\n",
+            "Fast-forward\n",
+            " keifiat.xlsx | Bin \u001b[31m0\u001b[m -> \u001b[32m19662291\u001b[m bytes\n",
+            " 1 file changed, 0 insertions(+), 0 deletions(-)\n",
+            " create mode 100644 keifiat.xlsx\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6hLvFMCB2Xfx"
+      },
+      "source": [
+        "! git push"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KOgkuMTC2afd"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
