--- a/clustring.ipynb
+++ b/clustring.ipynb
@@ -6,9 +6,8 @@
       "name": "clustring.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "mount_file_id": "1XeKp3FTibxDGrDNZAZqz7Tj_RA7p2Y1P",
-      "authorship_tag": "ABX9TyPBW3xo0Ra58dF2SCrncLl4",
+      "authorship_tag": "ABX9TyPY9ThQD53kwQ+VyaRWg4JN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,9 +41,12 @@
         "id": "B9Bl0RWIwQd1"
       },
       "source": [
-        ""
+        "import pandas as pd\r\n",
+        "import numpy as np\r\n",
+        "import matplotlib.pyplot as plt\r\n",
+        "from sklearn.preprocessing import LabelEncoder, normalize"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -163,28 +165,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zAWgZ0Z32TMz",
-        "outputId": "3e4a2274-041e-4729-c122-48b73a57a921"
+        "outputId": "4cd76907-b1fb-4ee9-c94a-9e0d026977dc"
       },
       "source": [
         "! git pull"
       ],
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "remote: Enumerating objects: 7, done.\u001b[K\n",
-            "remote: Counting objects:  14% (1/7)\u001b[K\rremote: Counting objects:  28% (2/7)\u001b[K\rremote: Counting objects:  42% (3/7)\u001b[K\rremote: Counting objects:  57% (4/7)\u001b[K\rremote: Counting objects:  71% (5/7)\u001b[K\rremote: Counting objects:  85% (6/7)\u001b[K\rremote: Counting objects: 100% (7/7)\u001b[K\rremote: Counting objects: 100% (7/7), done.\u001b[K\n",
+            "remote: Enumerating objects: 5, done.\u001b[K\n",
+            "remote: Counting objects:  20% (1/5)\u001b[K\rremote: Counting objects:  40% (2/5)\u001b[K\rremote: Counting objects:  60% (3/5)\u001b[K\rremote: Counting objects:  80% (4/5)\u001b[K\rremote: Counting objects: 100% (5/5)\u001b[K\rremote: Counting objects: 100% (5/5), done.\u001b[K\n",
             "remote: Compressing objects:  33% (1/3)\u001b[K\rremote: Compressing objects:  66% (2/3)\u001b[K\rremote: Compressing objects: 100% (3/3)\u001b[K\rremote: Compressing objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Total 5 (delta 2), reused 5 (delta 2), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (5/5), done.\n",
+            "remote: Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects:  33% (1/3)   \rUnpacking objects:  66% (2/3)   \rUnpacking objects: 100% (3/3)   \rUnpacking objects: 100% (3/3), done.\n",
             "From https://github.com/sulaimanbehzad/Clustering_according_to_item_popularity\n",
-            "   6b2793c..3c88399  main       -> origin/main\n",
-            "Updating 6b2793c..3c88399\n",
+            "   3c88399..1f2eeea  main       -> origin/main\n",
+            "Updating 3c88399..1f2eeea\n",
             "Fast-forward\n",
-            " keifiat.xlsx | Bin \u001b[31m0\u001b[m -> \u001b[32m19662291\u001b[m bytes\n",
-            " 1 file changed, 0 insertions(+), 0 deletions(-)\n",
-            " create mode 100644 keifiat.xlsx\n"
+            " clustring.ipynb | 170 \u001b[32m+++++++++++++++++++++++++++++++++++++++++++++++++++++++\u001b[m\u001b[31m-\u001b[m\n",
+            " 1 file changed, 168 insertions(+), 2 deletions(-)\n"
           ],
           "name": "stdout"
         }
@@ -211,6 +212,175 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2SYdX5hk4A43"
+      },
+      "source": [
+        "### Reading and preprocessing the dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wn7RmvfG4PBn"
+      },
+      "source": [
+        "df = pd.read_excel('/content/drive/MyDrive/Clustering_according_to_item_popularity/keifiat.xlsx')"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 467
+        },
+        "id": "WfxDx0mO5Jtg",
+        "outputId": "4f7bdf86-4e6d-4012-b56e-9b15ea6e117a"
+      },
+      "source": [
+        "df.head()"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>product_id</th>\n",
+              "      <th>product_title</th>\n",
+              "      <th>title_en</th>\n",
+              "      <th>user_id</th>\n",
+              "      <th>likes</th>\n",
+              "      <th>dislikes</th>\n",
+              "      <th>verification_status</th>\n",
+              "      <th>recommend</th>\n",
+              "      <th>title</th>\n",
+              "      <th>comment</th>\n",
+              "      <th>advantages</th>\n",
+              "      <th>disadvantages</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3692</td>\n",
+              "      <td>ماوس بی‌سیم لاجیتک مدل M325</td>\n",
+              "      <td>IT</td>\n",
+              "      <td>989472</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>verified</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>واقعا عالیه. من که ازش خیلی راضیم</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>90213</td>\n",
+              "      <td>شارژر همراه شیاومی مدل NDY-02-AN با ظرفیت 1000...</td>\n",
+              "      <td>AC</td>\n",
+              "      <td>3862150</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>verified</td>\n",
+              "      <td>recommended</td>\n",
+              "      <td>واقعاً عالیه</td>\n",
+              "      <td>سلام، قبل اینکه نظرم رو بگم میخواستم به یک موض...</td>\n",
+              "      <td>[\"عمر طولانی\\r\",\"افت بسیار کم میزان شارژ\\r\",\"ا...</td>\n",
+              "      <td>[\"ندارد\"]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>59473</td>\n",
+              "      <td>یدک پولیشر میکروفایبر مهسان مدل 20119</td>\n",
+              "      <td>HW</td>\n",
+              "      <td>626843</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>verified</td>\n",
+              "      <td>not_recommended</td>\n",
+              "      <td>خیلی سخت حوله اش در میاد</td>\n",
+              "      <td>گیره های فلزی خیلی سخت تا میشوند و لذا حوله را...</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>120499</td>\n",
+              "      <td>گوشی موبایل هوآوی آنر مدل 5X KIW-L21 دو سیم‌کارت</td>\n",
+              "      <td>MO</td>\n",
+              "      <td>786887</td>\n",
+              "      <td>6</td>\n",
+              "      <td>11</td>\n",
+              "      <td>verified</td>\n",
+              "      <td>no_idea</td>\n",
+              "      <td>گوشی مقرون به صرفه</td>\n",
+              "      <td>همه چیز در رابطه با ظاهر این گوشی بسیار خوب اس...</td>\n",
+              "      <td>[\"صفحه نمایش پرنور و با کیفیت\\r\",\"کیفیت بالای ...</td>\n",
+              "      <td>[\"کیفیت پایین اسپیکر\\r\",\"حاشیه خالی زیر صفحه ن...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>67200</td>\n",
+              "      <td>شارژر همراه شیائومی مدل Mi ظرفیت 5000 میلی آمپ...</td>\n",
+              "      <td>AC</td>\n",
+              "      <td>854531</td>\n",
+              "      <td>19</td>\n",
+              "      <td>4</td>\n",
+              "      <td>verified</td>\n",
+              "      <td>no_idea</td>\n",
+              "      <td>ابعاد، استحکام و نگهداری شارژ مناسب</td>\n",
+              "      <td>اگر ظرفیتش براتون کافیه حتما بخرید.\\r\\nیه شارژ...</td>\n",
+              "      <td>[\"ظریف و زیبا و باریک\\r\",\"بدنه محکم و با دوام\"]</td>\n",
+              "      <td>[\"ظرفیت متوسط\"]</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   product_id  ...                                      disadvantages\n",
+              "0        3692  ...                                                NaN\n",
+              "1       90213  ...                                          [\"ندارد\"]\n",
+              "2       59473  ...                                                NaN\n",
+              "3      120499  ...  [\"کیفیت پایین اسپیکر\\r\",\"حاشیه خالی زیر صفحه ن...\n",
+              "4       67200  ...                                    [\"ظرفیت متوسط\"]\n",
+              "\n",
+              "[5 rows x 12 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
     }
   ]
 }
