--- a/clustring.ipynb
+++ b/clustring.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1XeKp3FTibxDGrDNZAZqz7Tj_RA7p2Y1P",
-      "authorship_tag": "ABX9TyPY9ThQD53kwQ+VyaRWg4JN",
+      "authorship_tag": "ABX9TyODeNGrgyUuOW7YwStKqbZ4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "import matplotlib.pyplot as plt\r\n",
         "from sklearn.preprocessing import LabelEncoder, normalize"
       ],
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
       "source": [
         "% cd /content/drive/MyDrive/Clustering_according_to_item_popularity/\r\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +93,7 @@
       "source": [
         "! ls"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
       "source": [
         "! git clone https://github.com/sulaimanbehzad/Clustering_according_to_item_popularity.git"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
       "source": [
         "! git status"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +170,7 @@
       "source": [
         "! git pull"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,23 +230,23 @@
       "source": [
         "df = pd.read_excel('/content/drive/MyDrive/Clustering_according_to_item_popularity/keifiat.xlsx')"
       ],
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "WfxDx0mO5Jtg",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 467
         },
-        "id": "WfxDx0mO5Jtg",
-        "outputId": "4f7bdf86-4e6d-4012-b56e-9b15ea6e117a"
+        "outputId": "5835b2f7-f24b-477f-94f2-3a934b93279e"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 24,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,8 +378,277 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 5
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 300
+        },
+        "id": "0xhNJq3LB_Ur",
+        "outputId": "d9772491-1335-4e87-bebb-a07b3a06036c"
+      },
+      "source": [
+        "df.describe()"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>product_id</th>\n",
+              "      <th>user_id</th>\n",
+              "      <th>likes</th>\n",
+              "      <th>dislikes</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>100000.000000</td>\n",
+              "      <td>1.000000e+05</td>\n",
+              "      <td>100000.000000</td>\n",
+              "      <td>100000.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>426482.510140</td>\n",
+              "      <td>4.642959e+06</td>\n",
+              "      <td>3.114790</td>\n",
+              "      <td>1.649460</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>232470.511159</td>\n",
+              "      <td>2.619034e+06</td>\n",
+              "      <td>8.050031</td>\n",
+              "      <td>8.912705</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>300.000000</td>\n",
+              "      <td>4.661320e+05</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>220871.250000</td>\n",
+              "      <td>2.613059e+06</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>427858.000000</td>\n",
+              "      <td>4.710290e+06</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>619397.250000</td>\n",
+              "      <td>7.094806e+06</td>\n",
+              "      <td>4.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>909423.000000</td>\n",
+              "      <td>8.623288e+06</td>\n",
+              "      <td>854.000000</td>\n",
+              "      <td>1344.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          product_id       user_id          likes       dislikes\n",
+              "count  100000.000000  1.000000e+05  100000.000000  100000.000000\n",
+              "mean   426482.510140  4.642959e+06       3.114790       1.649460\n",
+              "std    232470.511159  2.619034e+06       8.050031       8.912705\n",
+              "min       300.000000  4.661320e+05       0.000000       0.000000\n",
+              "25%    220871.250000  2.613059e+06       0.000000       0.000000\n",
+              "50%    427858.000000  4.710290e+06       1.000000       0.000000\n",
+              "75%    619397.250000  7.094806e+06       4.000000       1.000000\n",
+              "max    909423.000000  8.623288e+06     854.000000    1344.000000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zVhO80lXAFiy"
+      },
+      "source": [
+        "Select the attributes that will give information about the popularity of the item"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6E1StDcrArEj"
+      },
+      "source": [
+        "df1 = df[['product_id', 'likes', 'dislikes','comment', 'recommend']]"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IyiMJvenCumt"
+      },
+      "source": [
+        "Check the dataframe for null values and handle them"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1vEzY81aCQ89",
+        "outputId": "1f5b4814-023c-486a-bac3-020fdd599b89"
+      },
+      "source": [
+        "df1.info()"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 100000 entries, 0 to 99999\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column      Non-Null Count   Dtype \n",
+            "---  ------      --------------   ----- \n",
+            " 0   product_id  100000 non-null  int64 \n",
+            " 1   likes       100000 non-null  int64 \n",
+            " 2   dislikes    100000 non-null  int64 \n",
+            " 3   comment     99883 non-null   object\n",
+            " 4   recommend   100000 non-null  object\n",
+            "dtypes: int64(3), object(2)\n",
+            "memory usage: 3.8+ MB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6fKohSogEJs8",
+        "outputId": "03422bd5-1232-475f-e5c7-43fd1d540120"
+      },
+      "source": [
+        "df1.isnull().sum()"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "product_id      0\n",
+              "likes           0\n",
+              "dislikes        0\n",
+              "comment       117\n",
+              "recommend       0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZHF0f1OMFSOJ"
+      },
+      "source": [
+        "looking at the database 'recommend'we can see that \\N values also represent null values which wouldn't be considered in the above"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_eF9GFiGFmge",
+        "outputId": "03588912-65c6-4ba1-ca00-5be694f267ed"
+      },
+      "source": [
+        "df1['recommend'].value_counts()"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "recommended        36972\n",
+              "\\N                 36382\n",
+              "not_recommended    16110\n",
+              "no_idea            10536\n",
+              "Name: recommend, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lEix1a8AF7m0"
+      },
+      "source": [
+        "we can see that beside the 117 missing values we have 36382 records with"
       ]
     }
   ]
