null values handling

--- a/clustring.ipynb
+++ b/clustring.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1XeKp3FTibxDGrDNZAZqz7Tj_RA7p2Y1P",
-      "authorship_tag": "ABX9TyODeNGrgyUuOW7YwStKqbZ4",
+      "authorship_tag": "ABX9TyMYUETgIyz/muVdqeV93bs8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -607,7 +607,7 @@
         "id": "ZHF0f1OMFSOJ"
       },
       "source": [
-        "looking at the database 'recommend'we can see that \\N values also represent null values which wouldn't be considered in the above"
+        "looking at the database 'recommend' we can see that \\N values also represent null values which wouldn't be considered in the above"
       ]
     },
     {
@@ -648,8 +648,19 @@
         "id": "lEix1a8AF7m0"
       },
       "source": [
-        "we can see that beside the 117 missing values we have 36382 records with"
+        "we can see that beside the 117 missing values we have 36382 records with \\N values\r\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3lq8cNtTT8tw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
