--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1XeKp3FTibxDGrDNZAZqz7Tj_RA7p2Y1P",
-      "authorship_tag": "ABX9TyMYUETgIyz/muVdqeV93bs8",
+      "authorship_tag": "ABX9TyMTNX6Ge5fQu4U8r1WCHpYj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,12 +65,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oBYKpZUHx4UR",
-        "outputId": "29e7c16f-8dc1-44d2-d65d-1221441a1c2f"
+        "outputId": "5a90f66a-7ca5-4c6b-ad6b-3ef3df4f903a"
       },
       "source": [
         "% cd /content/drive/MyDrive/Clustering_according_to_item_popularity/\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,12 +139,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "37LpX0j71-XT",
-        "outputId": "8bdc3da8-bc69-46d6-8328-f098df2e2a7c"
+        "outputId": "bee32731-2c72-4efc-e0a2-a46fd8135e9d"
       },
       "source": [
         "! git status"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +152,11 @@
             "On branch main\n",
             "Your branch is up to date with 'origin/main'.\n",
             "\n",
-            "nothing to commit, working tree clean\n"
+            "Changes to be committed:\n",
+            "  (use \"git reset HEAD <file>...\" to unstage)\n",
+            "\n",
+            "\t\u001b[32mdeleted:    clustring.ipynb\u001b[m\n",
+            "\n"
           ],
           "name": "stdout"
         }
@@ -165,27 +169,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zAWgZ0Z32TMz",
-        "outputId": "4cd76907-b1fb-4ee9-c94a-9e0d026977dc"
+        "outputId": "06113163-749b-4e0d-e4e7-b6117f12a6a3"
       },
       "source": [
         "! git pull"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "remote: Enumerating objects: 5, done.\u001b[K\n",
-            "remote: Counting objects:  20% (1/5)\u001b[K\rremote: Counting objects:  40% (2/5)\u001b[K\rremote: Counting objects:  60% (3/5)\u001b[K\rremote: Counting objects:  80% (4/5)\u001b[K\rremote: Counting objects: 100% (5/5)\u001b[K\rremote: Counting objects: 100% (5/5), done.\u001b[K\n",
-            "remote: Compressing objects:  33% (1/3)\u001b[K\rremote: Compressing objects:  66% (2/3)\u001b[K\rremote: Compressing objects: 100% (3/3)\u001b[K\rremote: Compressing objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects:  33% (1/3)   \rUnpacking objects:  66% (2/3)   \rUnpacking objects: 100% (3/3)   \rUnpacking objects: 100% (3/3), done.\n",
+            "remote: Enumerating objects: 14, done.\u001b[K\n",
+            "remote: Counting objects:   7% (1/14)\u001b[K\rremote: Counting objects:  14% (2/14)\u001b[K\rremote: Counting objects:  21% (3/14)\u001b[K\rremote: Counting objects:  28% (4/14)\u001b[K\rremote: Counting objects:  35% (5/14)\u001b[K\rremote: Counting objects:  42% (6/14)\u001b[K\rremote: Counting objects:  50% (7/14)\u001b[K\rremote: Counting objects:  57% (8/14)\u001b[K\rremote: Counting objects:  64% (9/14)\u001b[K\rremote: Counting objects:  71% (10/14)\u001b[K\rremote: Counting objects:  78% (11/14)\u001b[K\rremote: Counting objects:  85% (12/14)\u001b[K\rremote: Counting objects:  92% (13/14)\u001b[K\rremote: Counting objects: 100% (14/14)\u001b[K\rremote: Counting objects: 100% (14/14), done.\u001b[K\n",
+            "remote: Compressing objects:   8% (1/12)\u001b[K\rremote: Compressing objects:  16% (2/12)\u001b[K\rremote: Compressing objects:  25% (3/12)\u001b[K\rremote: Compressing objects:  33% (4/12)\u001b[K\rremote: Compressing objects:  41% (5/12)\u001b[K\rremote: Compressing objects:  50% (6/12)\u001b[K\rremote: Compressing objects:  58% (7/12)\u001b[K\rremote: Compressing objects:  66% (8/12)\u001b[K\rremote: Compressing objects:  75% (9/12)\u001b[K\rremote: Compressing objects:  83% (10/12)\u001b[K\rremote: Compressing objects:  91% (11/12)\u001b[K\rremote: Compressing objects: 100% (12/12)\u001b[K\rremote: Compressing objects: 100% (12/12), done.\u001b[K\n",
+            "remote: Total 12 (delta 7), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (12/12), done.\n",
             "From https://github.com/sulaimanbehzad/Clustering_according_to_item_popularity\n",
-            "   3c88399..1f2eeea  main       -> origin/main\n",
-            "Updating 3c88399..1f2eeea\n",
+            "   1f2eeea..6854a3e  main       -> origin/main\n",
+            "Updating 1f2eeea..6854a3e\n",
             "Fast-forward\n",
-            " clustring.ipynb | 170 \u001b[32m+++++++++++++++++++++++++++++++++++++++++++++++++++++++\u001b[m\u001b[31m-\u001b[m\n",
-            " 1 file changed, 168 insertions(+), 2 deletions(-)\n"
+            " clustering.ipynb | 666 \u001b[32m+++++++++++++++++++++++++++++++++++++++++++++++++++++++\u001b[m\n",
+            " clustring.ipynb  | 488 \u001b[32m++++++++++++++++++++++++++++++++++++++\u001b[m\u001b[31m--\u001b[m\n",
+            " 2 files changed, 1135 insertions(+), 19 deletions(-)\n",
+            " create mode 100644 clustering.ipynb\n"
           ],
           "name": "stdout"
         }
@@ -194,10 +200,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6hLvFMCB2Xfx"
+        "id": "irOD8twMpG7i"
       },
       "source": [
-        "! git push"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -205,13 +211,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KOgkuMTC2afd"
+        "id": "6hLvFMCB2Xfx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c35703c4-cee6-4bb2-cf1c-6d0c0a215b98"
       },
       "source": [
-        ""
+        "! git push -u origin main"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "fatal: could not read Username for 'https://github.com': No such device or address\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KOgkuMTC2afd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0bfcb048-f46c-4642-9b5b-0a635f3fc951"
+      },
+      "source": [
+        "! git commit -m 'redundant files removed'"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[main 8780da0] redundant files removed\n",
+            " 1 file changed, 666 deletions(-)\n",
+            " delete mode 100644 clustring.ipynb\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -648,7 +691,8 @@
         "id": "lEix1a8AF7m0"
       },
       "source": [
-        "we can see that beside the 117 missing values we have 36382 records with \\N values\r\n"
+        "we can see that beside the 117 missing values we have 36382 records with \\N values  \r\n",
+        "now we understand tha \\N too should be considered as missing value\r\n"
       ]
     },
     {
@@ -657,10 +701,288 @@
         "id": "3lq8cNtTT8tw"
       },
       "source": [
-        ""
+        "missing_values = [\"\\\\N\", \"na\", \"--\", \"NA\", \"n/a\"]\r\n",
+        "df = pd.read_excel('/content/drive/MyDrive/Clustering_according_to_item_popularity/keifiat.xlsx', na_values = missing_values)\r\n",
+        "df1 = df[['product_id', 'likes', 'dislikes','comment', 'recommend']]\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CsxF1DWT1tQr"
+      },
+      "source": [
+        "after importing database with newly found aspects on NA we are going to handle null values"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GZ5e6Rl61_be",
+        "outputId": "a3f4b3f0-6eb9-4b4a-f984-47b67e481668"
+      },
+      "source": [
+        "df1.isnull().sum()"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "product_id        0\n",
+              "likes             0\n",
+              "dislikes          0\n",
+              "comment         118\n",
+              "recommend     36382\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uF_6eOxQ2Fin",
+        "outputId": "96dc5abe-e44c-4581-bbe0-42de783e821f"
+      },
+      "source": [
+        "df1['recommend'].value_counts()"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "recommended        36972\n",
+              "not_recommended    16110\n",
+              "no_idea            10536\n",
+              "Name: recommend, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tYOY7txj2YVE",
+        "outputId": "70315a13-5196-4a1a-815b-703fd6d2fd9c"
+      },
+      "source": [
+        "most_common = df1[\"recommend\"].value_counts().idxmax\r\n",
+        "# df1['recommend'].fillna(median, inplace=True)\r\n",
+        "most_common"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method Series.idxmax of recommended        36972\n",
+              "not_recommended    16110\n",
+              "no_idea            10536\n",
+              "Name: recommend, dtype: int64>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "abP45dpl3EYI"
+      },
+      "source": [
+        "replacing the null values with one of the above would falsely impact the clustering so let's take another approach:  \r\n",
+        "1. use group by to obtain groups of products with the same product_id\r\n",
+        "2. assign the group most_common value to the null ones"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 455
+        },
+        "id": "nAHYbQaT4SZU",
+        "outputId": "f8b955c7-28ab-499f-f9d9-ddf20b125e88"
+      },
+      "source": [
+        "groups = df1.groupby(by=\"product_id\")\r\n",
+        "groups.last()"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>likes</th>\n",
+              "      <th>dislikes</th>\n",
+              "      <th>comment</th>\n",
+              "      <th>recommend</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>product_id</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>300</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>بسیار عالی\\r\\nپرینتری بینظیر</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>310</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>چاپگری بادوام و سریع است که می تونه چاپ روی کا...</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>352</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>پرچمدارپگوشی نوکیا تمام لمسی پس از سریN\\r\\nزما...</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>363</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>من این گوشی رو خیلی وقت میشه که دارم تقریبا ۶ ...</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>423</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>چند سالی میشه دارم باهاش برنامه های سنگین و پر...</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>907669</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>کیفیتش خوبه قیمتش هم مناسبه</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>908646</th>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>با توجه به اینکه ارتفاع طبقات 30 سانتی متریه، ...</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>908760</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>من فیکورس مدلهای اونتوس و وود رو دارم، انصافا ...</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>908917</th>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>اگه اصل باشه ارزش خرید را داره</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>909423</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>خیلی خوبه تو خربدش شک نکنید</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>50235 rows × 4 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            likes  ...  recommend\n",
+              "product_id         ...           \n",
+              "300             1  ...       None\n",
+              "310             2  ...       None\n",
+              "352             0  ...       None\n",
+              "363             0  ...       None\n",
+              "423             0  ...       None\n",
+              "...           ...  ...        ...\n",
+              "907669          1  ...       None\n",
+              "908646          4  ...       None\n",
+              "908760          0  ...       None\n",
+              "908917          2  ...       None\n",
+              "909423          0  ...       None\n",
+              "\n",
+              "[50235 rows x 4 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
     }
   ]
 }
