checkpoint in null values handling

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1XeKp3FTibxDGrDNZAZqz7Tj_RA7p2Y1P",
-      "authorship_tag": "ABX9TyMTNX6Ge5fQu4U8r1WCHpYj",
+      "authorship_tag": "ABX9TyNeiEV3Fv3BhkwmhucJNhhX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -724,12 +724,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GZ5e6Rl61_be",
-        "outputId": "a3f4b3f0-6eb9-4b4a-f984-47b67e481668"
+        "outputId": "fc738c42-348b-4485-f0bc-3eda22f541a7"
       },
       "source": [
         "df1.isnull().sum()"
       ],
-      "execution_count": 42,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -746,7 +746,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 54
         }
       ]
     },
@@ -757,12 +757,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uF_6eOxQ2Fin",
-        "outputId": "96dc5abe-e44c-4581-bbe0-42de783e821f"
+        "outputId": "ffbcf1f8-0791-4acd-b2cc-6497a9eba3ef"
       },
       "source": [
         "df1['recommend'].value_counts()"
       ],
-      "execution_count": 45,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +777,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 53
         }
       ]
     },
@@ -830,16 +830,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 455
+          "height": 424
         },
-        "id": "nAHYbQaT4SZU",
-        "outputId": "f8b955c7-28ab-499f-f9d9-ddf20b125e88"
+        "id": "KFy-crzh9bdE",
+        "outputId": "3f2702f3-aca1-4121-efd0-492509d08297"
       },
       "source": [
-        "groups = df1.groupby(by=\"product_id\")\r\n",
-        "groups.last()"
+        " groups = pd.concat(g for _, g in df1.groupby(\"product_id\") if len(g) > 1)\r\n",
+        " groups"
       ],
-      "execution_count": 52,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -863,54 +863,53 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
+              "      <th>product_id</th>\n",
               "      <th>likes</th>\n",
               "      <th>dislikes</th>\n",
               "      <th>comment</th>\n",
               "      <th>recommend</th>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>product_id</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>300</th>\n",
+              "      <th>35476</th>\n",
+              "      <td>300</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>بسیار عالی\\r\\nپرینتری بینظیر</td>\n",
-              "      <td>None</td>\n",
+              "      <td>راستش رو بخواین وقتی رفتم کارتریجش زرو شارژ کن...</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>310</th>\n",
-              "      <td>2</td>\n",
+              "      <th>36899</th>\n",
+              "      <td>300</td>\n",
               "      <td>0</td>\n",
-              "      <td>چاپگری بادوام و سریع است که می تونه چاپ روی کا...</td>\n",
-              "      <td>None</td>\n",
+              "      <td>1</td>\n",
+              "      <td>برای کارهای اداری عالیه و به درد اونایی که زیا...</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>352</th>\n",
+              "      <th>53425</th>\n",
+              "      <td>300</td>\n",
+              "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>پرچمدارپگوشی نوکیا تمام لمسی پس از سریN\\r\\nزما...</td>\n",
-              "      <td>None</td>\n",
+              "      <td>حرف نداره برای کارای سنگین محشره</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>363</th>\n",
+              "      <th>68494</th>\n",
+              "      <td>300</td>\n",
+              "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>من این گوشی رو خیلی وقت میشه که دارم تقریبا ۶ ...</td>\n",
-              "      <td>None</td>\n",
+              "      <td>بهترین پرینتری که تا به حال استفاده کردم\\r\\nکم...</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>423</th>\n",
+              "      <th>76639</th>\n",
+              "      <td>300</td>\n",
+              "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>چند سالی میشه دارم باهاش برنامه های سنگین و پر...</td>\n",
-              "      <td>None</td>\n",
+              "      <td>فوق العادس\\r\\nتنها ایرادش نداشتن wifi هست</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -918,69 +917,103 @@
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>907669</th>\n",
+              "      <th>97319</th>\n",
+              "      <td>903494</td>\n",
               "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>کیفیتش خوبه قیمتش هم مناسبه</td>\n",
-              "      <td>None</td>\n",
+              "      <td>1</td>\n",
+              "      <td>واقعا نیم بوت محکمی هست و از کیفیت خیلی خوبی ب...</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>908646</th>\n",
-              "      <td>4</td>\n",
-              "      <td>0</td>\n",
-              "      <td>با توجه به اینکه ارتفاع طبقات 30 سانتی متریه، ...</td>\n",
-              "      <td>None</td>\n",
+              "      <th>97347</th>\n",
+              "      <td>903494</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>از لحاظ کیفیت ساخت هم خیلی خوبه و هم با دوام</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>908760</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>من فیکورس مدلهای اونتوس و وود رو دارم، انصافا ...</td>\n",
-              "      <td>None</td>\n",
+              "      <th>97294</th>\n",
+              "      <td>903513</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>خیلی راحته و جنس خیلی خوبی داره</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>908917</th>\n",
+              "      <th>97308</th>\n",
+              "      <td>903513</td>\n",
+              "      <td>3</td>\n",
               "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>اگه اصل باشه ارزش خرید را داره</td>\n",
-              "      <td>None</td>\n",
+              "      <td>در یک کلام بسیار بوت قشنگی هست و خیلی کیفیت خو...</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>909423</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>خیلی خوبه تو خربدش شک نکنید</td>\n",
-              "      <td>None</td>\n",
+              "      <th>97322</th>\n",
+              "      <td>903513</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2</td>\n",
+              "      <td>بسیار بوت خوبی هستش هم از نظر طراحی و هم کیفیت...</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>50235 rows × 4 columns</p>\n",
+              "<p>66059 rows × 5 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "            likes  ...  recommend\n",
-              "product_id         ...           \n",
-              "300             1  ...       None\n",
-              "310             2  ...       None\n",
-              "352             0  ...       None\n",
-              "363             0  ...       None\n",
-              "423             0  ...       None\n",
+              "       product_id  ...  recommend\n",
+              "35476         300  ...        NaN\n",
+              "36899         300  ...        NaN\n",
+              "53425         300  ...        NaN\n",
+              "68494         300  ...        NaN\n",
+              "76639         300  ...        NaN\n",
               "...           ...  ...        ...\n",
-              "907669          1  ...       None\n",
-              "908646          4  ...       None\n",
-              "908760          0  ...       None\n",
-              "908917          2  ...       None\n",
-              "909423          0  ...       None\n",
+              "97319      903494  ...        NaN\n",
+              "97347      903494  ...        NaN\n",
+              "97294      903513  ...        NaN\n",
+              "97308      903513  ...        NaN\n",
+              "97322      903513  ...        NaN\n",
               "\n",
-              "[50235 rows x 4 columns]"
+              "[66059 rows x 5 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 52
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BVtdd8Bq-q9p",
+        "outputId": "738473b1-c95f-43a8-b879-d8ebb44651a3"
+      },
+      "source": [
+        "for item in groups:\r\n",
+        "  print(str(item) + str(type(item)))\r\n",
+        "\r\n"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "product_id<class 'str'>\n",
+            "likes<class 'str'>\n",
+            "dislikes<class 'str'>\n",
+            "comment<class 'str'>\n",
+            "recommend<class 'str'>\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
