--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -6,8 +6,9 @@
       "name": "clustering.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "mount_file_id": "1XeKp3FTibxDGrDNZAZqz7Tj_RA7p2Y1P",
-      "authorship_tag": "ABX9TyPU35TFcBZM+RrKz8UFjHl6",
+      "authorship_tag": "ABX9TyPqzhlYF7E+ZoKpwzfHPKAn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,7 +218,7 @@
         "id": "WfxDx0mO5Jtg",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 467
+          "height": 574
         },
         "outputId": "8c6bf0d3-9651-4e65-f1b4-81d684577605"
       },
@@ -1096,7 +1097,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 534
+          "height": 554
         },
         "id": "toAFAfPW2et6",
         "outputId": "8b16c857-8f32-4e21-9d89-c37f97d8c02f"
@@ -1365,12 +1366,68 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eCPTXrDXM-0d"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eCPTXrDXM-0d",
+        "outputId": "b7575b2b-d317-492a-d4b8-8b1856900ba2"
       },
       "source": [
-        "df1.drop_duplicates(subset='product_id')"
+        "df1.drop_duplicates(subset='product_id', inplace=True, keep='first')\r\n",
+        "df1.info()"
       ],
-      "execution_count": null,
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 50189 entries, 1 to 99998\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column      Non-Null Count  Dtype  \n",
+            "---  ------      --------------  -----  \n",
+            " 0   product_id  50189 non-null  int64  \n",
+            " 1   likes       50189 non-null  int64  \n",
+            " 2   dislikes    50189 non-null  int64  \n",
+            " 3   comment     50189 non-null  object \n",
+            " 4   recommend   50189 non-null  float64\n",
+            "dtypes: float64(1), int64(3), object(1)\n",
+            "memory usage: 2.3+ MB\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \"\"\"Entry point for launching an IPython kernel.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0cqma277N0yM"
+      },
+      "source": [
+        "More than 49000 products with duplicate records were deleted as a result\r\n",
+        "let's save the preproccessed dataframe upto now"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W3xiFSOcOBkb"
+      },
+      "source": [
+        "df1.to_csv('preprocessed_item_recomm.csv',index=False, encoding='utf-8-sig')"
+      ],
+      "execution_count": 84,
       "outputs": []
     }
   ]
